Cambio de idioma agregado en login

--- a/DOST/LoginWindow.xaml
+++ b/DOST/LoginWindow.xaml
@@ -14,5 +14,9 @@
         <PasswordBox x:Name="passwordPasswordBox" materialDesign:HintAssist.Hint="{x:Static p:Resources.PasswordText}" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="0,0,146,201" Height="38" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="200" />
         <Button x:Name="loginButton"  Style="{StaticResource MaterialDesignRaisedDarkButton}" Content="{x:Static p:Resources.LoginButton}" Margin="182,189,182,147" Click="LoginButton_Click"/>
         <Button x:Name="registerButton" Style="{StaticResource MaterialDesignFlatButton}" Content="{x:Static p:Resources.RegisterButton}" Margin="195,226,195,110" Click="RegisterButton_Click"/>
+        <ComboBox x:Name="languageSelectorComboBox" HorizontalAlignment="Left" Margin="367,10,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="LanguageSelectorComboBox_SelectionChanged">
+            <ListBoxItem Content="Español"/>
+            <ListBoxItem Content="English"/>
+        </ComboBox>
     </Grid>
 </Window>
