--- a/DOST/GameLobbyWindow.xaml
+++ b/DOST/GameLobbyWindow.xaml
@@ -34,9 +34,10 @@
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <Setter Property="Padding" Value="8, 0, 0, 0"/>
+                    <Setter Property="Focusable" Value="False" />
                 </Style>
             </ListBox.ItemContainerStyle>
-            <TextBlock Text="{x:Static p:Resources.ChatWelcomeText}" Margin="0,0,0,10" />
+            <TextBlock Text="{x:Static p:Resources.ChatWelcomeText}" Margin="0,0,0,10" Focusable="False" />
         </ListBox>
         <TextBox x:Name="chatMessageTextBox" Margin="19,643,15,19" Foreground="White" materialDesign:HintAssist.Hint="Escribe un mensaje..." KeyDown="ChatMessageTextBox_KeyDown" />
     </Grid>
